--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name="com.irudaru.airporttickets.app.AirportTicketsApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AirportTickets"
         tools:targetApi="31">
-        <activity
-            android:name=".presentation.MainActivity"
+        <activity android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AirportTickets">
